[package]
name = "verifier"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Verifier server to validate SNP reports and measurements"
exclude = [ ".gitignore", ".github/*" ]
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
axum = "0.7.5"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
openssl = { version = "^0.10", features = ["vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.117" }
x509-parser = { version="^0.14", features=["verify"] }
asn1-rs = "0.5.2"
env_logger = "0.10.0"
anyhow = "1.0.69"
sev = { version = "^3.1.1", default-features = false, features = ['openssl','snp']}
clap = { version = "<4.5", features = [ "derive" ] }
reqwest = { version="0.11.10", features = ["blocking","json"] }
bincode = "^1.2.1"
hex = "0.4"